# two-gate-dispatch

./: .gitignore  BENCHMARK.md  DESCRIPTION.md  LICENSE  Makefile  README.md  dispatch-gate.sh  gate_form.py  gate_substance.py  prompt_parser.py  pyproject.toml  two_gate_dispatch_cli.py
examples/: EXAMPLES-COMPARISON.md  bad-contradiction.txt  bad-missing-path.txt  good-prompt.txt  realworld-missing-verification-path.txt  realworld-read-output-conflict.txt
tests/: test_gates.py
